// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MdInput Component Should change value of testBtnOnClick upon click 1`] = `
<div>
  <div
    class="d-none d-lg-block"
  >
    <div
      class="dropdown"
    >
      <button
        aria-expanded="false"
        class="dropdown-toggle title title-none"
        type="button"
      >
        Admin
      </button>
      <div
        aria-labelledby=""
        class="dropdown-menu"
        x-placement="bottom-start"
      >
        <div
          class="text-center py-2 px-4"
        >
          <button
            class="dropdown-item"
            data-rr-ui-dropdown-item=""
            href="/admin/lessons"
          >
            Lessons
          </button>
        </div>
        <hr
          class="dropdown-divider"
          role="separator"
        />
        <div
          class="text-center py-2 px-4"
        >
          <button
            class="dropdown-item"
            data-rr-ui-dropdown-item=""
            href="/admin/users"
          >
            Users
          </button>
        </div>
        <div
          class="text-center py-2 px-4"
        >
          <button
            class="dropdown-item"
            data-rr-ui-dropdown-item=""
            href="/admin/alerts"
          >
            Alerts
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="d-lg-none"
  >
    <div
      class="text-center py-2 px-4"
    >
      <button
        class="dropdown-item"
        data-rr-ui-dropdown-item=""
        href="/admin/lessons"
      >
        Lessons
      </button>
    </div>
    <hr
      class="dropdown-divider"
      role="separator"
    />
    <div
      class="text-center py-2 px-4"
    >
      <button
        class="dropdown-item"
        data-rr-ui-dropdown-item=""
        href="/admin/users"
      >
        Users
      </button>
    </div>
    <div
      class="text-center py-2 px-4"
    >
      <button
        class="dropdown-item"
        data-rr-ui-dropdown-item=""
        href="/admin/alerts"
      >
        Alerts
      </button>
    </div>
  </div>
</div>
`;

exports[`MdInput Component Should render divider when an item is null 1`] = `
<div>
  <div
    class="d-none d-lg-block"
  >
    <div
      class="dropdown"
    >
      <button
        aria-expanded="false"
        class="dropdown-toggle title title-none"
        type="button"
      >
        Admin
      </button>
    </div>
  </div>
  <div
    class="d-lg-none"
  >
    <div
      class="text-center py-2 px-4"
    >
      <button
        class="dropdown-item"
        data-rr-ui-dropdown-item=""
        href="/admin/lessons"
      >
        Lessons
      </button>
    </div>
    <hr
      class="dropdown-divider"
      role="separator"
    />
    <div
      class="text-center py-2 px-4"
    >
      <button
        class="dropdown-item"
        data-rr-ui-dropdown-item=""
        href="/admin/users"
      >
        Users
      </button>
    </div>
    <div
      class="text-center py-2 px-4"
    >
      <button
        class="dropdown-item"
        data-rr-ui-dropdown-item=""
        href="/admin/alerts"
      >
        Alerts
      </button>
    </div>
  </div>
</div>
`;
